docs/api/qiskit/0.19/extensions.mdx
---
title: extensions (v0.19)
description: API reference for qiskit.extensions in qiskit v0.19
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.extensions
---

<span id="module-qiskit.extensions" />

<span id="qiskit-extensions" />

<span id="quantum-circuit-extensions-qiskit-extensions" />

# Quantum Circuit Extensions

`qiskit.extensions`

## Unitary Extensions

|                                                                                                                  |                                                                                 |
| ---------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------- |
| [`UnitaryGate`](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")(data\[, label])                   | Class for representing unitary gates                                            |
| [`HamiltonianGate`](qiskit.extensions.HamiltonianGate "qiskit.extensions.HamiltonianGate")(data, time\[, label]) | Class for representing evolution by a Hermitian Hamiltonian operator as a gate. |

## Simulator Extensions

|                                                                                                                 |                                 |
| --------------------------------------------------------------------------------------------------------------- | ------------------------------- |
| [`Snapshot`](qiskit.extensions.Snapshot "qiskit.extensions.Snapshot")(label\[, snapshot\_type, num\_qubits, …]) | Simulator snapshot instruction. |

## Initialization

|                                                                                     |                                   |
| ----------------------------------------------------------------------------------- | --------------------------------- |
| [`Initialize`](qiskit.extensions.Initialize "qiskit.extensions.Initialize")(params) | Complex amplitude initialization. |

